--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: archive
 
 {{ content }}
 
-<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
+<!-- <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
 {% if paginator %}
   {% assign posts = paginator.posts %}
@@ -17,4 +17,25 @@ layout: archive
   {% include documents-collection.html entries=posts type=entries_layout %}
 </div>
 
-{% include paginator.html %}
+{% include paginator.html %} -->
+
+<h2>I am Sumin Jeong,</h2>
+<h4>a bioinformatician<br>exploring better ways to interpret biological data.</h4>
+
+<p>I am currently working on these projects:</p>
+<ul>
+  <li>Q-omics</li>
+  <li>NetCrafter</li>
+  <li>QStrain</li>
+  <li>Consensus Data Mining</li>
+</ul>
+
+<!-- <h2>Education</h2>
+<ul>
+  <li>
+    <strong>M.S. in Biological Sciences</strong>, Sookmyung Women's University, Mar 2022 - Feb 2024
+  </li>
+  <li>
+    <strong>B.S. in Biological Sciences & B.Eng. in Software Convergence</strong>, Sookmyung Women's University, Mar 2018 - Feb 2022
+  </li>
+</ul> -->
