--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -71,6 +71,11 @@
     width: auto;
   }
 
+  .photo-page2 .page__content img {
+    max-height: 200px;
+    width: auto;
+  }
+
   .page__title {
     margin-top: 0;
     line-height: 1;
